04_results/Summary/envoy_proof_mtls1.3-postquantum_20260901_090914.yaml
apiVersion: v1
items:
- apiVersion: networking.istio.io/v1alpha3
  kind: EnvoyFilter
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.istio.io/v1alpha3","kind":"EnvoyFilter","metadata":{"annotations":{},"name":"force-pqc-client","namespace":"default"},"spec":{"configPatches":[{"applyTo":"CLUSTER","match":{"cluster":{"name":"outbound|8000||httpbin.default.svc.cluster.local"},"context":"SIDECAR_OUTBOUND"},"patch":{"operation":"MERGE","value":{"per_connection_buffer_limit_bytes":32768,"transport_socket":{"name":"envoy.transport_sockets.tls","typed_config":{"@type":"type.googleapis.com/envoy.exten [...]
    creationTimestamp: "2026-09-01T08:38:21Z"
    generation: 1
    name: force-pqc-client
    namespace: default
    resourceVersion: "46559"
    uid: e78fbc01-923a-49f1-866e-a0a910db9f39
  spec:
    configPatches:
    - applyTo: CLUSTER
      match:
        cluster:
          name: outbound|8000||httpbin.default.svc.cluster.local
        context: SIDECAR_OUTBOUND
      patch:
        operation: MERGE
        value:
          per_connection_buffer_limit_bytes: 32768
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
              common_tls_context:
                tls_params:
                  ecdh_curves:
                  - X25519MLKEM768
                  - X25519Kyber768Draft00
                  - X25519
                  tls_maximum_protocol_version: TLSv1_3
                  tls_minimum_protocol_version: TLSv1_3
    workloadSelector:
      labels:
        app: k6
- apiVersion: networking.istio.io/v1alpha3
  kind: EnvoyFilter
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.istio.io/v1alpha3","kind":"EnvoyFilter","metadata":{"annotations":{},"name":"force-pqc-server","namespace":"default"},"spec":{"configPatches":[{"applyTo":"FILTER_CHAIN","match":{"context":"SIDECAR_INBOUND","listener":{"filterChain":{"destinationPort":8080,"transportProtocol":"tls"}}},"patch":{"operation":"MERGE","value":{"per_connection_buffer_limit_bytes":32768,"transport_socket":{"name":"envoy.transport_sockets.tls","typed_config":{"@type":"type.googleapis.com [...]
    creationTimestamp: "2026-09-01T08:38:21Z"
    generation: 1
    name: force-pqc-server
    namespace: default
    resourceVersion: "46560"
    uid: 010ffcc9-a282-4b72-a57f-cc2111ee2f35
  spec:
    configPatches:
    - applyTo: FILTER_CHAIN
      match:
        context: SIDECAR_INBOUND
        listener:
          filterChain:
            destinationPort: 8080
            transportProtocol: tls
      patch:
        operation: MERGE
        value:
          per_connection_buffer_limit_bytes: 32768
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                tls_params:
                  ecdh_curves:
                  - X25519MLKEM768
                  - X25519Kyber768Draft00
                  - X25519
                  tls_maximum_protocol_version: TLSv1_3
                  tls_minimum_protocol_version: TLSv1_3
    workloadSelector:
      labels:
        app: httpbin
kind: List
metadata:
  resourceVersion: ""
